--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,14 @@
     <label for="userInput" class="block mb-2 font-medium">Enter your writing：</label>
     <textarea id="userInput" rows="6" class="w-full p-3 border border-gray-300 rounded-lg mb-4" placeholder="Example：Je voudrais améliorer mon français."></textarea>
 
+    <label for="targetLang" class="block mb-2 font-medium">Choose your target language：</label>
+    <select id="targetLang" class="w-full p-2 border border-gray-300 rounded-lg mb-4">
+      <option value="zh">中文</option>
+      <option value="en">English</option>
+      <option value="ru">Russian</option>
+    </select>
+
+
     <label for="replyLang" class="block mb-2 font-medium">Choose a response language：</label>
     <select id="replyLang" class="w-full p-2 border border-gray-300 rounded-lg mb-4">
       <option value="zh">中文</option>
