--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <option value="es">Español</option>
     </select>
 
-    <button onclick="getAIResponse()" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">AI Assistant</button>
+    <button onclick="getAIResponse()" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Get Feedback</button>
 
     <div id="aiFeedback" class="mt-6 p-4 bg-white border border-gray-200 rounded-lg whitespace-pre-wrap"></div>
   </div>
